# reed

./: .gitignore  README.md  package-lock.json  package.json  spec.md
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: settings.local.json
.claude/skills/askme/: SKILL.md
.claude/skills/browser/: SKILL.md  commands.md  test-export.md
.claude/skills/dev-server/: SKILL.md
.claude/skills/skill-doctor/: SKILL.md  checklist.md
.claude/skills/torbjorn-add/: SKILL.md
.claude/skills/torbjorn-init/: SKILL.md
.claude/skills/torbjorn-inspect/: SKILL.md
.claude/skills/torbjorn-plan/: SKILL.md
.claude/skills/torbjorn-run/: SKILL.md
.claude/skills/torbjorn-status/: SKILL.md
.torbjorn/: batch-tasks.txt  config.toml  learnings.md  runs.jsonl  tasks.json
.torbjorn/signal/: done  heartbeat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  markdown.rs  watcher.rs
ui/: index.html  main.js  style.css
