[package]
name = "reed"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
pulldown-cmark = { version = "0.13" }
syntect = "5"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
